# hikari

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: categorize.rs  commands.rs  error.rs  lib.rs  models.rs  state.rs
src-tauri/src/pdf/: detect.rs  extract.rs  mod.rs
src-tauri/src/pdf/parsers/: generic.rs  mercadopago.rs  mod.rs  nubank.rs  sofisa.rs
src-tauri/src/repo/: cards.rs  categories.rs  mod.rs  transactions.rs
src-tauri/src/vault/: backup.rs  connection.rs  crypto.rs  migrations.rs  mod.rs
src/components/: AppShell.tsx  BulkApplyDialog.tsx  BulkRenameDialog.tsx  CardDialog.tsx  CardFilterChips.tsx  CategoryDialog.tsx  CommandPalette.tsx  CurrencyToggle.tsx  FilterDialog.tsx  ImportDialog.tsx  LanguageToggle.tsx  PageHeader.tsx  TransactionDialog.tsx
src/components/charts/: ChartTooltip.tsx
src/components/ui/: Button.tsx  Card.tsx  DeltaBadge.tsx  Dialog.tsx  (+11 more)
src/hooks/: useAutolock.ts  useCurrencyStore.ts  useImportStore.ts  useTheme.ts  useVaultStore.ts  useViewMonthStore.ts
src/lib/: backup.ts  config.ts  csvExport.ts  dialogs.ts  historyStore.ts  i18n.ts  ipc.ts  mock.ts  mutations.ts  nav.ts  queries.ts  toast.ts  utils.ts
src/locales/: en.json  pt-BR.json
src/routes/: Cards.tsx  Categories.tsx  Dashboard.tsx  ImportPreview.tsx  Installments.tsx  Settings.tsx  Transactions.tsx  Unlock.tsx
src/styles/: globals.css
