[package]
name = "hikari"
version = "0.1.7"
description = "Hikari — acompanhamento local de faturas de cartão"
authors = ["fxlipe <felipescla@proton.me>"]
edition = "2021"

[lib]
name = "hikari_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "chrono", "uuid"] }

rand = "0.8"

lopdf = "0.34"
pdf-extract = "0.9"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
regex = "1"
anyhow = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
